--- a/src/Modal.scss
+++ b/src/Modal.scss
@@ -46,6 +46,7 @@
 	margin: 10%;
 	.modal-content {
 		height: 80%;
+		width: auto;
 
 		background: transparent;
 		display: flex;
